--- a/template/test_result.html
+++ b/template/test_result.html
@@ -56,7 +56,7 @@
     <p>Your Score: {{ score }}</p>
     <p>Status: {{ passed|yesno:"Passed,Failed" }}</p>
 
-    <a href="{% url 'my_courses' %}" class="button">View My Courses</a>
+    <a href="{% url 'my_courses' %}" class="button">Go to Courses</a>
 
     {% if passed %}
         <a href="{% url 'generate_certificate' user_id=user.id course_id=course.id %}" class="button">Get Certificate</a>  <!-- Link to Get Certificate -->
